Header and Banner section added, also responsive done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header class="bg-primary">
+        <nav class="nav-bar container flex flex-dir-col">
+            <h3 class="fs-primary">G3 Architects</h3>
+            <ul class="nav-items flex">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+        </nav>
+        <div class="container">
+            <div class="banner-content text-center">
+                <h1><span>Brand New</span> Group of Architects</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <a href="#" class="btn-primary">Explore More</a>
+            </div>
+            <img src="images/banner.png" alt="">
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
