--- a/index.html
+++ b/index.html
@@ -21,15 +21,33 @@
             </ul>
         </nav>
         <div class="container">
-            <div class="banner-content text-center">
-                <h1><span>Brand New</span> Group of Architects</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="banner-content text-center mb-3">
+                <h1 class="mb-3"><span>Brand New</span> Group of Architects</h1>
+                <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <a href="#" class="btn-primary">Explore More</a>
             </div>
             <img src="images/banner.png" alt="">
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="features">
+            <div class="container">
+                <div class="features-wrap flex flex-dir-col">
+                    <div class="feature-images">
+                        <img src="images/team1.png" alt="">
+                        <img src="images/team2.png" alt="">
+                        <img src="images/team3.png" alt="">
+                        <img src="images/team4.png" alt="">
+                    </div>
+                    <div class="feature-content">
+                        <h2 class="fs-primary mb-3"><span>Quick list</span> of Our <span>Features</span></h2>
+                        <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <a href="#" class="btn-primary">Explore More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
