Services section added, responsive left to do

--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
                 </div>
             </div>
         </section>
+        <section class="services">
+            <div class="container">
+                <div class="services-wrap flex flex-dir-col">
+                    <div class="services-content">
+                        <h2 class="fs-primary mb-3">Features you will love & enjoy</h2>
+                        <p class="mb-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                        <div class="box mb-3">
+                            <h3>Dexktop & Mobile Version</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="box mb-3">
+                            <h3>Drag & Drop Builder</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="box mb-3">
+                            <h3>Awesome Modern Design</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                        <div class="box">
+                            <h3>Super Easy to Edit</h3>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                        </div>
+                    </div>
+                    <div class="services-img">
+                        <img src="images/architect.png" alt="">
+                        <p><span>10+ Year</span> Experience</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
